python-app-ingress.yml
apiVersion: networking.k8s.io/v1

kind: Ingress

metadata:
  name: python-app-ingress

  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1

spec:
  rules:
    - host: python-app.info

      http:
        paths:
          - path: /

            pathType: Prefix

            backend:
              service:
                name: python-app

                port:
                  number: 5000
